# MTG

./: .gitignore  README.md  pyproject.toml
doc/public/glossary/: README.md
notebook/private/: 17Lands_Any.ipynb  17Lands_BRO.ipynb  17Lands_Draft.ipynb  17Lands_Game.ipynb  17Lands_Join.ipynb  17Lands_LCI.ipynb  run.ps1
