[project]
name = "MTG_utility"
version = "0.1.0-dev"
description = "Default template for PDM package"
authors = [
    {name = "Shuai Zhang", email = "zhangshuai.ustc@gmail.com"},
]
dependencies = [
    "pandas>=2.2.0",
    "pyarrow>=15.0.0",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "CC-BY-NC-SA-4.0"}


[project.optional-dependencies]
notebook = [
    "duckdb>=0.9.2",
    "notebook>=7.0.7",
    "jupysql>=0.10.8",
    "matplotlib>=3.8.2",
    "duckdb-engine>=0.10.0",
    "nbconvert>=7.14.2",
    "papermill>=2.5.0",
    "seaborn>=0.13.2",
]
[tool.pdm]
distribution = false
